# robotics_rigid_body_dynamics

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  create_lib.sh  reset_git.sh
apps/: CMakeLists.txt  app.cc
cmake/: config.h.in  robotics_exp_proj-config.cmake.in  robotics_rigid_body_dynamics-config.cmake.in
doc/: tutorial.md
include/robotics/exp_proj/: exp_class.h
include/robotics/rigid_body_dynamics/: rigid_body_dynamics.h
resource/: FrankaEmikaSubChain.urdf
src/: exp_class.cc  macros.h  rigid_body_dynamics.cc
test/: exp_class_test.cc  rigid_body_dynamis_test.cc
